# Kukushka

./: .gitignore  HD73583Ac_assignment3_taskA_parameters.txt  HD73583Ac_assignment3_taskA_spectrum.txt  README.md  WASP-107b_A High Internal Heat Flux and Large Core in a Warm Neptune Exoplanet_report_assignment3_taskB.txt  assignment1_taskB.txt  assignment1_taskE.txt  assignment3_taskC.txt  assignment3_taskD.txt  conflict.txt  newkepler_file.txt  pyproject.toml  report_injected_assignment2_taskG.txt  report_no_injection_assignment2_taskE.txt  taskC_dvinka.txt  taskC_eternamente.txt  taskC_ulasfratnoyan.txt  test_add.txt
src/daneel/: __main__.py
src/daneel/detection/: data_process.py  report_injection_assignment2_taskE.txt  report_no_injection_assignment2_taskD.txt  transit.py
src/daneel/parameters/: parameters.py
